Projet total/Assembleur/tests/good/testfile-good-jump-1.ms
    .section text
    jal %rax %rbx
    jal %rax L0
    jmp %rax
L0:
    jmp L0