Projet total/Assembleur/tests/bad/testfile-bad-label-3.ms
    .section text
beq %rax %rbx L1